(chore): improve application UI/UX add function to call tool tip fix responsive table add cursor pointer to actionable icons and buttons make book card image link to the book detail page make carousel image link to the corresponding detail page make search icon clickable update review image fix single book tabs use materialize truncate class on book overview of book card update admin reducer with add book operation update user image on associated user review object add username to favorite controller user object update styles improve profile page side bar fix search by isbn in search placeholder fix tabs in admindashboard and single book component format dates in admindashboard fix borrowed book url in user action
[finishes #157790385]

--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -33,6 +33,9 @@ body {
   
   .icon-sit {
     margin-top: -0.4em;
+    .clickable {
+      cursor: pointer;
+    }
   }
   
   .nav-wrapper {
@@ -274,6 +277,7 @@ body {
     color: inherit;
     outline: 0 !important;
     font-weight: 200;
+    cursor: pointer;
   }
   
   .pencil {
@@ -400,6 +404,15 @@ body {
     color: #000;
     outline: 0 !important;
     font-weight: 200;
+    .upvoted-style {
+      color: rgb(0, 169, 0)
+    }
+    .downvoted-style {
+      color: 'red'
+    }
+    .review-posted {
+      color: rgb(91, 150, 196)
+    }
   }
   
   .home-page-slider {
@@ -408,3 +421,22 @@ body {
       height: 500px;
     }
   }
+
+  .favorite-card {
+    height: 520px;
+  }
+
+  .fav-card-image { 
+    max-height: '175px';
+    min-height: '150px';
+    padding-top: '10px';
+  }
+  // .postReviewButton {
+  //   width: '25%';
+  //   margin-left: '36em';
+  //   // border: 2px double grey;
+  //   // &:hover {
+  //   //   background: grey;
+  //   //   color: white;
+  //   // }
+  // }
